# video_surveillance

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/bgs_app/: CMakeLists.txt  bgs_app.cc
apps/target_recognition/: CMakeLists.txt  target_recognition.cc
apps/video_speedup/: CMakeLists.txt  video_speedup.cc
apps/video_split/: CMakeLists.txt  video_split.cc
apps/video_wrap/: CMakeLists.txt  video_wrap.cc
cnn/: CNNClassificator.cpp  CNNClassificator.h
dataset/: 1_clip_person_in.avi  1_clip_person_out.avi  3_person_cross.avi
include/: fg_vibe.h  foreground_blob_detector.h  utils.h  vibe.h
src/: fg_vibe.cc  foreground_blob_detector.cc  utils.cc  vibe.cc
